src/objects/Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>emailtemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>emailtemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_name__c</fullName>
        <label>Template name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BLN Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>